2017-04-02  Daniel J Sebald <daniel.sebald@ieee.org>

	* src/eval.c (update_gpval_variables):  Sanity check the string
	stored in GPVAL_PWD.  However if the current directoty is invalid
	GPVAL_PWD still contains the previous string.

2017-04-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c term/qt.trm src/qtterminal/qt_term.cpp
	src/qtterminal/QtGnuplotWindow.cpp: The qt terminal assumed that
	"space-raises-console" would be implemented in the core code.
	But it never was.  Instead on non-MSWin platforms hitting <space>
	in the qt window generates a mouse protocol error.
	Document that "space-raises-console" is only for MSWin, and have
	other platforms treat it like any other key.

	* configure.ac src/gplt_x11.c:  The code chunk in gplt_x11.c that
	supports space-raises-console for the KDE3 konsole was giving 
	compiler warnings.  Rather than fiddle with code used by almost
	no one (it doesn't work under KDE4 or KDE5), make KDE3+DCOP support
	a build-time option:   ./configure --with-x --with-x-dcop

2017-04-01  Daniel J Sebald <daniel.sebald@ieee.org>

	* src/plot.c (main):  Exit with error if dropping privilege fails.

2017-03-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.h src/plot3d.c src/datafile.c:  Add a slot in the plot 
	structure to track a 2nd named sampling variable, e.g. 
	    splot [u=1:5][v=1:5] '++' using (u):(v):(u*sin(v))

	* src/plot2d.c src/plot3d.c:  Extend the sampling range parsing to
	track named sampling variables for 2D sampling '++' as well as 1D
	sampling '+'. Minor cosmetic modifications to the 2D and 3D code to
	make it more obviously parallel.

	* demo/sampling.dem:  Add example of named sampling ranges in 3D.

	* src/graph3d.c (do_3dplot):  "set xyplane at 0; set log z; splot..." =>
	no plot drawn.  Change this so that "at 0" for logscale z is treated as
	"xyplane at <Z-axis min>".
	Bugfix.

2017-03-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h (ACTUAL_STORE_WITH_LOG_AND_UPDATE_RANGE) 